# AODSOLVE-Gemini

./: CMakeLists.txt  CPGAnnotation.cpp  CPGAnnotation.h  README.md  aodsolve_main_analyzer.cpp  aodsolve_main_analyzer.h  enhanced_aod_graph.cpp  enhanced_aod_graph.h  enhanced_aod_node.cpp  enhanced_aod_node.h  enhanced_ast_analyzer.cpp  enhanced_ast_analyzer.h  enhanced_code_generator.cpp  enhanced_code_generator.h  enhanced_cpg_to_aod_converter.cpp  enhanced_cpg_to_aod_converter.h  enhanced_vectorization_demo.cpp  function_inline_analyzer.cpp  function_inline_rules.h  integrated_cpg_analyzer.cpp  integrated_cpg_analyzer.h  loop_vectorization_analyzer.cpp  loop_vectorization_analyzer.h  main.cpp  optimization_rule_system.cpp  optimization_rule_system.h  rule_driven_code_generator.h  simd_instruction_rules.h  universal_optimization_engine.cpp
